Repositioned frame, fixed youtube vids z-index

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .name{
-  position:absolute;
+  position:fixed;
   top:-0.2%;
   left:4%;
   font-weight:100;
@@ -20,6 +20,7 @@
   color:#b6b6ca;
   text-align: left;
   pointer-events: none;
+  z-index: 10;
 }
 
 .pcEffects{
@@ -98,10 +99,10 @@
 }
 
 .blueGlow{
-  position:absolute;
+  position:fixed;
   inset:5% 2.5%;
   box-shadow: 0 0 30px #00c8ff31;
-  z-index:2;
+  z-index:10;
   pointer-events: none;
 }
 /*
@@ -130,14 +131,17 @@
   width:100%;
   height:5.5%;
   position:fixed;
-  z-index: 1;
+  z-index: 2;
 }
 
 .pcFrame{
-  position:absolute;
+  position:fixed;
+  left:0%;
+  top:0%;
   height:100%;
   width:100%;
   pointer-events: none;
+  z-index: 2;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -146,7 +150,7 @@
   width:100%;
   padding:0;
   height:5.5%;
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   left:0%;
   bottom:-0.2%;
@@ -170,7 +174,7 @@
   }
 
   .pcFrame{
-  position:absolute;
+  position:fixed;
   height:100%;
   width:100%;
   pointer-events: none;
