--- a/src/components/projectBox.css
+++ b/src/components/projectBox.css
@@ -22,6 +22,8 @@
 .projectMedia{
     width:80%;
     margin: 0 auto;
+    position:relative;
+    z-index:1;
 }
 
 .shortText{
